Fix bugs in chatbox and improve mobile compability
Too short / too long chat message now will not cause problem in
chatbox width.

Mobile layout is redesigned to improve compability

--- a/src/web/game.css
+++ b/src/web/game.css
@@ -3,14 +3,25 @@
 */
 
 #board {
-    max-width: 1150px;
-    width: 100%;
+    width: 85%;
     display: grid;
     grid-template-columns: 13vw 13vw 13vw 13vw 13vw;
-    grid-template-rows: 14vh 14vh 14vh 14vh 14vh;
+    grid-template-rows: 12vh 12vh 12vh 12vh 12vh;
     column-gap: 2vw;
     row-gap: 2vh;
     transition: transform 250ms ease-in-out;
+}
+
+/*
+* SCORING SYSTEM
+*/
+#scores {
+    font-size: 4em;
+}
+
+#blueMember,
+#redMember {
+    font-size: 1.2vw;
 }
 
 /*
@@ -20,7 +31,7 @@
 /* all cards */
 .card {
     width: 13vw;
-    height: 13vh;
+    height: 12vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,6 +148,7 @@
     border-radius: 15px;
     display: inline-block;
     height: 100vh;
+    width: 20%;
 }
 
 .arrow {
@@ -362,26 +374,25 @@ input[type=range]::-webkit-slider-thumb {
     }
 
     #board {
-        max-width: 600px;
-        width: 100%;
+        width: 77%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto;
         column-gap: 1vh;
-        row-gap: 1px;
+        row-gap: 1vw;
         grid-auto-columns: auto;
         grid-auto-rows: auto;
         transition: transform 250ms ease-in-out;
-        justify-content: center
+        justify-content: center;
     }
 
     .card:nth-last-child(1){
-        grid-column:2 ;
+        grid-column: 2;
     }
 
     .card {
         width: 100px;
-        height: 60px;
+        height: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -394,77 +405,22 @@ input[type=range]::-webkit-slider-thumb {
         text-transform: uppercase;
     }
 
-    .clueBox {
-        width: 400px;
-        align-self: center;
-    }
-    
-    .clueBox input {
-        width: 150px;
-        margin: 5px 10px 5px 0;
-        padding: 10px;
-
-        border-radius: 7px;
-        text-align: center;
-    }
-    
-    .clueBox button {
-        padding: 10px 20px;
-        cursor: pointer;
+    #blueMember,
+    #redMember {
+        font-size: 0.8em;
+        width: 100%;
+        display: inline-block;
     }
 
-        .clueBox button:hover {
-        background-color: lightGreen;
-    }
-    
-    #maxClues {
-        padding: 10px 20px;
-        cursor: pointer;
-        border-radius: 7px;
-    }
-
-    .set {
-        width: 60px;
-        position: absolute;
-        top: 20px;
-        transform: translate(0, -50%);
-        cursor: pointer;
-    }
-    
-    .setBox {
-        position: fixed;
-        left: 0;
-        top: 0;
-        z-index: 100;
-        width: 100vw;
-        height: 100vh;
-        background: #ffdede;
-        display: none;
-    }
-    
-    .setTit {
-        text-align: center;
-        font-size: 40px;
-        font-weight: bold;
-        padding: 50px 0;
-        padding-bottom: 20px;
-    }
-    
-    .setSubTit {
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
+    #scores {
+        font-size: 3em;
     }
 
     .sidebarContainer{
         width: 100%;
     }
 
-    #openSidebarMenu{
-        width: 15%;
-    }
-
     #sidebarMenu{
-        width: 60%;
+        width: 80%;
     }
 }
